--- a/appDr4TP3/src/main/resources/application.properties
+++ b/appDr4TP3/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-spring.datasource.url=jdbc:mysql://localhost/dbDr4TP3?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://database-1.bzbac9jtpnxq.us-east-1.rds.amazonaws.com/dbDr4TP3?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.username=admin
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
+server.port=5000
