--- a/appDr4TP3/src/main/resources/application.properties
+++ b/appDr4TP3/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-spring.datasource.url=jdbc:mysql://database-1.czbac9jtpnxq.us-east-1.rds.amazonaws.com/dbDr4TP3?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://database-2.czbac9jtpnxq.us-east-1.rds.amazonaws.com/dbDr4TP3?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
 spring.datasource.username=admin
-spring.datasource.password=987654321
+spring.datasource.password=de1aOito
 spring.jpa.hibernate.ddl-auto=create
